# OpenAPIsYAMLyJSON/luislazarraga-SistemasWebPractica-1.0-swagger.json
@@ -3,28 +3,26 @@
   "info" : {
     "title" : "API para el MENU de nuestro restaurante",
     "version" : "1.0",
-    "description" : "# Título\nAPI para los distintos platos de comida que incluimos en el menú.\nCuenta con operaciones CRUD para las comidas e ingredientes y su\ndisponibilidad en la semana \n"
+    "description" : "# Título\nAPI para los distintas platos de comida que incluimos en el menú.\nCuenta con operaciones CRUD para las comidas e ingredientes y su\ndisponibilidad en la semana \n"
   },
   "tags" : [ {
-    "name" : "comida",
+    "name" : "receta",
     "description" : "Menu"
-  }, {
-    "name" : "diasDeLaSemana",
-    "description" : "Los dias donde la comida está disponible en el menu"
-  } ],
+  }
+     ],
   "paths" : {
-    "/comidas" : {
+    "/recetas" : {
       "get" : {
-        "summary" : "Obtener el menu general",
-        "operationId" : "getMenu",
-        "tags" : [ "comida" ],
+        "summary" : "Obtener recetas",
+        "operationId" : "getReceta",
+        "tags" : [ "receta" ],
         "responses" : {
           "200" : {
             "description" : "OK/ACK",
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/comidas"
+                  "$ref" : "#/components/schemas/recetas"
                 }
               }
             }
@@ -32,21 +30,21 @@
         }
       },
       "post" : {
-        "summary" : "Añadir una comida al menu",
-        "operationId" : "addComida",
-        "tags" : [ "comida" ],
+        "summary" : "Añadir una receta",
+        "operationId" : "addReceta",
+        "tags" : [ "receta" ],
         "requestBody" : {
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/comida"
+                "$ref" : "#/components/schemas/recetas"
               }
             }
           }
         },
         "responses" : {
           "201" : {
-            "description" : "Comida añadida al menú",
+            "description" : "Receta añadida",
             "content" : {
               "application/json" : {
                 "schema" : {
@@ -56,7 +54,7 @@
             }
           },
           "default" : {
-            "description" : "Error al añadir comida",
+            "description" : "Error al añadir receta",
             "content" : {
               "application/json" : {
                 "schema" : {
@@ -68,29 +66,29 @@
         }
       }
     },
-    "/comidas/{id}" : {
+    "/recetas/{id}" : {
       "get" : {
-        "summary" : "Obtener datos de una comida dada",
-        "operationId" : "getComidaFromId",
-        "tags" : [ "comida" ],
+        "summary" : "Obtener datos de una receta dada",
+        "operationId" : "getRecetaFromId",
+        "tags" : [ "receta" ],
         "responses" : {
           "200" : {
             "description" : "ACK",
             "content" : {
               "application/json" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/comida"
+                  "$ref" : "#/components/schemas/recetas"
                 }
               },
               "application/xml" : {
                 "schema" : {
-                  "$ref" : "#/components/schemas/comida"
+                  "$ref" : "#/components/schemas/recetas"
                 }
               }
             }
           },
           "default" : {
-            "description" : "Error al obtener el menú",
+            "description" : "Error al obtener receta",
             "content" : {
               "application/json" : {
                 "schema" : {
@@ -105,9 +103,9 @@
         } ]
       },
       "put" : {
-        "summary" : "Modificar datos de una comida concreta",
-        "operationId" : "updateMenu",
-        "tags" : [ "comida" ],
+        "summary" : "Modificar datos de una receta concreta",
+        "operationId" : "updateReceta",
+        "tags" : [ "receta" ],
         "parameters" : [ {
           "$ref" : "#/components/parameters/id"
         } ],
@@ -116,7 +114,7 @@
             "description" : "Ok"
           },
           "default" : {
-            "description" : "Error al obtener el menú",
+            "description" : "Error al obtener la receta",
             "content" : {
               "application/json" : {
                 "schema" : {
@@ -130,17 +128,17 @@
           "content" : {
             "application/json" : {
               "schema" : {
-                "$ref" : "#/components/schemas/comida_edit"
+                "$ref" : "#/components/schemas/receta_edit"
               }
             }
           }
         }
       },
       "delete" : {
-        "summary" : "Eliminar una comida del menú",
+        "summary" : "Eliminar una receta",
         "description" : "TODO",
-        "operationId" : "eliminarComida",
-        "tags" : [ "comida" ],
+        "operationId" : "eliminarReceta",
+        "tags" : [ "receta" ],
         "parameters" : [ {
           "$ref" : "#/components/parameters/id"
         } ],
@@ -149,83 +147,12 @@
             "description" : "ACK"
           },
           "default" : {
-            "description" : "Error al obtener el menu",
+            "description" : "Error al obtener receta",
             "content" : {
               "application/json" : {
                 "schema" : {
                   "$ref" : "#/components/schemas/error"
                 }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/comidas/{id}/diasDeLaSemana" : {
-      "get" : {
-        "summary" : "Ver los días de la semana en los que esa comida está en el menú",
-        "operationId" : "getdiasDeLaSemanabyComidaId",
-        "tags" : [ "comida", "diasDeLaSemana" ],
-        "parameters" : [ {
-          "$ref" : "#/components/parameters/id"
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Ok",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/diasSemana"
-                }
-              }
-            }
-          },
-          "default" : {
-            "description" : "Error al acceder a la película",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/error"
-                }
-              }
-            }
-          }
-        }
-      },
-      "post" : {
-        "summary" : "Añade la comida a un dia de la semana",
-        "operationId" : "addIdComidaToDiaSemana",
-        "tags" : [ "comida", "diasDeLaSemana" ],
-        "parameters" : [ {
-          "$ref" : "#/components/parameters/id"
-        } ],
-        "responses" : {
-          "201" : {
-            "description" : "ACK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/info_nuevo_elemento"
-                }
-              }
-            }
-          },
-          "default" : {
-            "description" : "Error al obtener comida",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/error"
-                }
-              }
-            }
-          }
-        },
-        "requestBody" : {
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/diasDeLaSemana"
               }
             }
           }
@@ -238,7 +165,7 @@
       "id" : {
         "name" : "id",
         "in" : "path",
-        "description" : "ID de la comida",
+        "description" : "ID de la receta",
         "required" : true,
         "schema" : {
           "$ref" : "#/components/schemas/id"
@@ -276,55 +203,48 @@
           "id" : 7
         }
       },
-      "comidas" : {
+      "recetas" : {
         "type" : "array",
         "items" : {
-          "$ref" : "#/components/schemas/comida"
+          "$ref" : "#/components/schemas/receta"
         }
       },
-      "comida" : {
+      "receta" : {
         "allOf" : [ {
-          "$ref" : "#/components/schemas/comida_edit"
+          "$ref" : "#/components/schemas/receta_edit"
         }, {
-          "required" : [ "comida", "descripcion", "tipo", "ingredientes" ]
+          "required" : [ "titulo", "ingredientes", "instrucciones", "imagen" ]
         } ],
-        "example" : {
-          "comida" : "Lentejas_con_chorizo",
-          "tipo" : {
-            "tipo" : "legumbres"
-          },
-          "ingredientes" : [ {
-            "nombre" : "lentejas"
-          }, {
-            "nombre" : "zanahorias"
-          }, {
-            "nombre" : "chorizo"
-          }, {
-            "nombre" : "guisantes"
-          } ],
-          "descripcion" : "Plato tradicional en españa"
-        }
+      "example" : {
+        "receta": "Lentejas_con_chorizo",
+        "titulo": {
+            "titulo": "lentejas"
+        },
+        "ingredientes": [{"nombre": "lentejas"},{"nombre": "zanahorias"},{"nombre": "chorizo"}, {"nombre": "guisantes"}],
+        "instrucciones": "Añadimos las lentejas, la hoja de laurel y las patatas, chascándolas con el cuchillo, y cocemos un par de minutos. Cubrimos con abundante agua fría y cocemos (mejor tapadas) durante 40-50 minutos o hasta que estén tiernas. Si se vieran muy secas, añadimos más agua durante el proceso. Calentamos un chorro de aceite en una sartén, añadimos el pimentón y retiramos inmediatamente del fuego para evitar que se queme. Incorporamos a la cacerola con las lentejas, removemos y cocemos cinco minutos más. Servimos bien calientes.",
+        "imagen": ""
       },
-      "comida_edit" : {
+      "receta_edit" : {
         "type" : "object",
         "additionalProperties" : false,
         "minProperties" : 1,
         "properties" : {
-          "comida" : {
+          "receta" : {
             "type" : "string"
           },
-          "descripcion" : {
+          "titulo" : {
             "type" : "string"
-          },
-          "tipo" : {
-            "type" : "integer"
           },
           "ingredientes" : {
             "$ref" : "#/components/schemas/array_ingredientes"
+          },
+          "instrucciones" : {
+            "type" : "string"
+          },
+          "imagen": {
+            "type" : "string"
           }
-        },
-        "example" : {
-          "comida" : "Lentejas_con_chorizo"
+        }
         }
       },
       "array_ingredientes" : {
@@ -343,29 +263,6 @@
         },
         "example" : {
           "nombre" : "Queso"
-        }
-      },
-      "diasSemana" : {
-        "type" : "array",
-        "items" : {
-          "$ref" : "#/components/schemas/diasDeLaSemana"
-        }
-      },
-      "diasDeLaSemana" : {
-        "type" : "object",
-        "properties" : {
-          "dia" : {
-            "type" : "string",
-            "format" : "string"
-          },
-          "periodo" : {
-            "type" : "string",
-            "format" : "string"
-          }
-        },
-        "example" : {
-          "dia" : "Martes",
-          "periodo" : "Cena"
         }
       }
     }
